--- a/backend/env.example
+++ b/backend/env.example
@@ -11,10 +11,28 @@ WHATSAPP_PHONE_ID=your_phone_id_here
 # DATABASE_URL=postgresql://usuario:senha@host:porta/nome_do_banco
 # Exemplo EasyPanel: DATABASE_URL=postgresql://postgres:senha@db.easypanel.app:5432/devocional_db
 
-# Configurações Evolution API para Devocionais
+# Configurações Evolution API para Devocionais (LEGADO - usar EVOLUTION_INSTANCES)
 EVOLUTION_API_URL=http://localhost:8080
 EVOLUTION_API_KEY=sua_chave_api_aqui
 EVOLUTION_INSTANCE_NAME=Devocional
+
+# Configurações Multi-Instância Evolution API
+# Formato: JSON string com lista de instâncias
+# Exemplo com 4 instâncias:
+EVOLUTION_INSTANCES=[{"name":"Devocional-1","api_url":"http://localhost:8080","api_key":"key1","display_name":"Devocional Diário","max_messages_per_hour":20,"max_messages_per_day":200,"priority":1,"enabled":true},{"name":"Devocional-2","api_url":"http://localhost:8080","api_key":"key2","display_name":"Devocional Diário","max_messages_per_hour":20,"max_messages_per_day":200,"priority":1,"enabled":true},{"name":"Devocional-3","api_url":"http://localhost:8080","api_key":"key3","display_name":"Devocional Diário","max_messages_per_hour":20,"max_messages_per_day":200,"priority":1,"enabled":true},{"name":"Devocional-4","api_url":"http://localhost:8080","api_key":"key4","display_name":"Devocional Diário","max_messages_per_hour":20,"max_messages_per_day":200,"priority":1,"enabled":true}]
+
+# Nome padrão para exibição no WhatsApp
+EVOLUTION_DISPLAY_NAME=Devocional Diário
+
+# Estratégia de distribuição entre instâncias
+# Opções: "round_robin", "least_used", "priority", "random"
+EVOLUTION_INSTANCE_STRATEGY=round_robin
+
+# Enviar vCard automaticamente para novos contatos
+SEND_VCARD_TO_NEW_CONTACTS=false
+
+# Enviar mensagem pedindo para salvar contato
+SEND_CONTACT_REQUEST=false
 
 # Rate Limiting (proteção contra bloqueio do WhatsApp)
 DELAY_BETWEEN_MESSAGES=3.0  # segundos entre mensagens (recomendado: 3-5)
