--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,28 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "axios": "^1.6.2",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "typescript": "^5.3.3"
+    "zustand": "^4.4.7",
+    "react-hook-form": "^7.49.2",
+    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.2",
+    "recharts": "^2.10.3",
+    "date-fns": "^2.30.0",
+    "react-quill": "^2.0.0",
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-quill": "^1.3.10",
     "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.3",
     "vite": "^5.0.8"
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   }
 }
 
