feat: Implementar sistema completo de autenticaÃ§Ã£o JWT
- Modelo User no banco de dados
- Endpoints de autenticaÃ§Ã£o (login/logout/me/create-user)
- Hash de senhas com bcrypt
- Tokens JWT com expiraÃ§Ã£o configurÃ¡vel
- DependÃªncias para proteger rotas
- Scripts para criar usuÃ¡rio admin
- MigraÃ§Ã£o SQL para tabela users
- ConfiguraÃ§Ã£o CORS atualizada
- Guia completo de autenticaÃ§Ã£o

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,4 +13,7 @@ aiohttp==3.9.1
 selenium==4.15.2
 webdriver-manager==4.0.1
 psycopg2-binary==2.9.9  # PostgreSQL driver
+python-jose[cryptography]==3.3.0  # JWT tokens
+passlib[bcrypt]==1.7.4  # Hash de senhas
+python-multipart==0.0.6  # Para forms
 
