--- a/.dockerignore
+++ b/.dockerignore
@@ -11,8 +11,8 @@ venv/
 .gitignore
 README.md
 *.md
-frontend/
 node_modules/
+frontend/node_modules/
+frontend/dist/
+backend/__pycache__/
 .DS_Store
-.vscode/
-.idea/
