--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,4 +17,5 @@ python-jose[cryptography]==3.3.0  # JWT tokens
 passlib[bcrypt]==1.7.4  # Hash de senhas
 python-multipart==0.0.6  # Para forms
 email-validator==2.1.0  # Validação de email para Pydantic
+pydub==0.25.1  # Conversão de áudio
 
