--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,11 +7,11 @@ ARG VITE_API_URL
 ENV VITE_API_URL=$VITE_API_URL
 
 # Copiar arquivos de dependências
-COPY package*.json ./
-RUN npm ci
+COPY frontend/package*.json ./
+RUN npm install
 
 # Copiar código fonte
-COPY . .
+COPY frontend/ ./
 
 # Build
 RUN npm run build
@@ -20,7 +20,7 @@ RUN npm run build
 FROM nginx:alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
