fix: adiciona rota de teste e logs detalhados de headers para debug

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://imobmiq_devocional-backend:3001/api;
+        proxy_pass http://imobmiq_devocional-backend:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -21,9 +21,5 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-        
-        # Logs de erro para debug
-        error_log /var/log/nginx/api_error.log;
-        access_log /var/log/nginx/api_access.log;
     }
 }
